ng changes to merge master branch of eae to master branch of opal
